# wikidata-osm-matcher

./: .env  .gitignore  .tokens  Justfile  README.md
backend/: config.py  main.py  pyproject.toml
backend/clients/: overpass.py  wikidata.py
backend/matcher/: __init__.py  base.py  bbox.py  name.py
backend/routers/: auth.py  matcher.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_matcher_base.py  test_matcher_bbox.py  test_matcher_name.py  test_overpass_client.py  test_wikidata_client.py
configs/: bathing_place.yaml  hiking_trail.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.ts  router.ts
frontend/src/api/: index.test.ts  index.ts
frontend/src/components/: CandidateList.test.ts  CandidateList.vue  CountryList.vue  DivisionList.vue  MatchReview.test.ts  MatchReview.vue  ObjectTypeSelector.test.ts  ObjectTypeSelector.vue
frontend/src/composables/: useBackendHealth.ts
frontend/src/i18n/: en.json  sv.json
